	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2020-01-09
	Changed: Altered some process handling logic to attempt to fix a handling counter leak. Uncertain if the problem is fixed as nothing observed seems to suggest the leak should happen under any conditions.
	Changed: Recheck should not delay normal logic, it is no longer waited on.
### 2020-01-03
	Added: Configuration for maximum component load time (default 120s). No UI configuration yet.
### 2019-12-22
	Fixed: SynchronizationLockException due to using thread locking when it made no sense.
### 2019-12-19
	Fixed: Don't output IOException when failing to gain access to executable for legacy testing.
	Fixed: Odd update issues with the log list.
	Added: Trace log status is shown in the normal log as well if enabled.
### 2019-12-17
	Changed: Stop logging voluntary crashes.
### 2019-12-16
	Changed: Make internal code report power plan/behaviour changes more explicitly.
	Changed: Session start high performance _reset_ should be skipped if anything else has changed the power behaviour.
### 2019-12-08
	Fixed: ArgumentOutOfRangeException for process select dialog when nothing was selected.
### 2019-12-07
	Fixed: NotImplementedException for a feature not being intended to be implemented.
	Fixed: NullReferenceException when attempting to create a new watchlist rule.
### 2019-12-03
	Changed: Don't write crash log on some soft failures.
### 2019-12-02
	Added: Dialog to attempt restart if there's an initialization failure with relevant errors.
	Changed: Some error handling should now produce much more useful messages.
### 2019-11-29
	Fixed: Null reference exception in hang detector.
### 2019-11-23
	Fixed: Processor count is fetched via P/Invoke to avoid a rare COM exception. (reported by Chairkicker Nick)
	Fixed: Null reference error in exit cleanup. (reported by Chairkicker Nick)
	Fixed: Double reporting of an error in exit cleanup. (reported by Chairkicker Nick)
### 2019-11-11